# RoboticDesign---Team-10

./: README.md
manipulator_work/manipulator_info/: GetMotionPlan_info.txt
manipulator_work/manipulator_ros2_workspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
manipulator_work/manipulator_ros2_workspace/install/manipulator_package/lib/manipulator_package/: moveit_control_node
manipulator_work/manipulator_ros2_workspace/install/manipulator_package/share/manipulator_package/: package.bash  package.dsv  package.ps1  package.sh  (+2 more)
manipulator_work/manipulator_ros2_workspace/install/moveit_task_constructor_visualization/lib/: libmotion_planning_tasks_rviz_plugin.so.0.1.3  libmoveit_task_visualization_tools.so.0.1.3
manipulator_work/manipulator_ros2_workspace/log/: latest_build
manipulator_work/manipulator_ros2_workspace/px150_moveit_interface/: CMakeLists.txt  package.xml
manipulator_work/manipulator_ros2_workspace/src/manipulator_package/: package.xml  setup.cfg  setup.py
manipulator_work/manipulator_ros2_workspace/src/manipulator_package/manipulator_package/: moveit_control_node.py
manipulator_work/manipulator_ros2_workspace/src/mtc_tutorial/launch/: mtc_demo.launch.py
manipulator_work/manipulator_ros2_workspace/src/mtc_tutorial/src/: mtc_tutorial.cpp
manipulator_work/video_evidence/: Very_first_off_the_shelf_robot_sim.webm
src/object_detection/: package.xml  setup.py
src/object_detection/launch/: object_detection_launch.py
src/object_detection/object_detection/: caogao.py  color_detection_subscriber.py  openve_1.py
(+20 files in other folders)
