<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_detection</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jiayi.zeng-2@postgrad.manchester.ac.uk">mscrobotics2425laptop7</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <!-- 依赖 ROS 2 通信和消息类型 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- 依赖 Realsense 相关库 -->
  <exec_depend>realsense2_camera</exec_depend>  
  <exec_depend>python3-pyrealsense2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>


  <!-- 依赖 OpenCV 和 NumPy -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>




